<resources>
    <string name="app_name">Hackcessibility</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_api_key">AIzaSyD5ECGarTe0ejlO5qsO44vLyXm1Spu2FPE</string>
    <string name="title_activity_public_space">PublicSpaceActivity</string>
    <string name="ramp">Ramp</string>
    <string name="elevator">Elevator</string>
    <string name="automatic_doors">Automatic Doors</string>
    <string name="handicapped_parking">Handicapped Parking</string>
    <string name="accessible_seating">Accessible Seating</string>
    <string name="accessible_washrooms">Accessible Washrooms</string>
    <string name="textSize">25sp</string>
    <string name="none">NONE</string>
    <string name="submit">Submit</string>
    <string name="describe_the_situation">Describe the situation.</string>
    <string name="upload_a_photo">upload A Photo</string>
    <string name="add_review">Add Review</string>
    <string name="what_would_you_like_to_add">What would you like to add?</string>
    <string name="add_incident">Add Incident</string>
</resources>
<!--

    <string name="ramp">Ramp \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="elevator">Elevator \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="automatic_doors">Automatic Doors \t\t\t\t\t\t\t\t</string>
    <string name="handicapped_parking">Handicapped Parking \t\t\t</string>
    <string name="accessible_seating">Accessible Seating \t\t\t\t\t\t</string>
    <string name="accessible_washrooms">Accessible Washrooms \t</string>

-->

