<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatePlace">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ramp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ramp"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/ramp"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/elevator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/elevator"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/elevator"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/doors_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/doors"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/automatic_doors"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parking_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parking"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/handicapped_parking"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seating_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seating"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/accessible_seating"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/washrooms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/washrooms"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/accessible_washrooms"
            android:textSize="20sp"

            />

        <RatingBar
            android:id="@+id/ratingBar7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="3" />

    </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="Button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>